--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -46,5 +48,10 @@
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
