--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
